<resources>
    <string name="app_name">Final project</string>
    <string name="username">Username</string>
    <string name="language">Change Language</string>
    <string name="settings">Settings</string>
    <string name="danish">Danish</string>
    <string name="english">English</string>
    <string name="nav_home">Home</string>
    <string name="nav_programs">Programs</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="description">Description</string>
    <string name="exercises">Exercises</string>
    <string name="setActive">Set active</string>
    <string name="time">Time</string>
    <string name="minutes">minutes</string>
    <string name="new_program">New program</string>
    <string name="program_name">Program name</string>
    <string name="save">Save</string>
    <string name="new_program_error">Program name or exercise list can\'t be empty</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_exercise">Exercise</string>
    <string name="active_programs">Active programs</string>
    <string name="start">Start</string>
    <string name="added">Added </string>
    <string name="active_toast_text"> to active programs</string>
    <string name="stop">Stop</string>
    <string name="logged_in_program">You need to be logged in to access programs</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved_changes">Saved changes</string>
    <string name="deleted">Deleted</string>
    <string name="no_active_programs">No active programs</string>
    <string name="visit_programs">Visit the programs tab to start your workout</string>
    <string name="friend_not_logged_in">You need to be logged in to access friends</string>
    <string name="friend_title">Friends</string>
    <string name="friend_no_active_programs"> User has no active programs</string>
    <string name="friend_no_history">User has no history</string>
    <string name="all">All</string>
    <string name="nav_map">Map</string>

    <!-- Excersises strings -->
    <string name="new_exercise">New exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_muscle_group">Muscle groups</string>
    <string name="exercise_tools">Tools</string>
    <string name="exercise_description">Description</string>
    <string name="exercise_time">Time</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="name">Name</string>
    <string name="search">Search for exercise</string>
    <string name="add">Add</string>

    <!-- history -->
    <string name="Finish">Finish</string>
    <string name="finish_program">completed program</string>
    <string name="history">History</string>
    <string name="completed_on">Completed on: </string>

    <!-- Login in settings -->
    <string name="email_login">Email Adress</string>
    <string name="password_login">Password</string>
    <string name="forgotpassword_login">Forgot Password?</string>
    <string name="register_login">Register</string>
    <string name="login_button">Login</string>
    <string name="history_button">History</string>
    <string name="friends_button">Friends</string>
    <string name="loginlogout_button">Login / logout</string>
    <string name="logout_button">Logout</string>
    <string name="login_succes">Login was successful</string>
    <string name="login_unsucces">Login was unsuccessfully! Please check your credentials</string>
    <string name="login_verify">Check your email to verify your account</string>
    <string name="user_logged_in">Logged in as: </string>
    <string name="user_not_logged_in">Not logged in</string>
    <string name="reset_button">Reset password</string>
    <string name="reset_password_succes">Check your email to reset password</string>
    <string name="reset_password_unsucces">Try again!</string>

    <!-- Register -->
    <string name="register_button">Register User</string>
    <string name="email_empty">Email is required!</string>
    <string name="email_pattern">Please provide valid email!</string>
    <string name="password_empty">Password is required!</string>
    <string name="password_length">Password length requires at least 6 characters!</string>
    <string name="registeruser_succes">User has been registered succesfully</string>
    <string name="registeruser_unsucces">User already exist</string>
    <string name="filter_muscle">Search for muscle and tool</string>
    <string name="min_time">Min time</string>
    <string name="max_time">Max time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>