<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_programs"
        android:icon="@drawable/ic_programs"
        android:title="@string/nav_programs" />

    <item
        android:id="@+id/nav_exercises"
        android:icon="@drawable/ic_exercises"
        android:title="@string/nav_exercise" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"/>

</menu>