<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercises.NewExerciseActivity"
    android:padding="@dimen/padding">

    <EditText
        android:id="@+id/new_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_exercise_muscle_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_muscle_group"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_muscle_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/added_muscle_group" />

    <EditText
        android:id="@+id/new_exercise_tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_tools"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/added_tools" />

    <EditText
        android:id="@+id/new_exercise_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_exercise_tools" />

    <EditText
        android:id="@+id/new_exercise_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/exercise_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_exercise_description" />

    <Button
        android:id="@+id/btn_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:onClick="addExerciseClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_exercise_time" />

    <TextView
        android:id="@+id/added_muscle_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_exercise_name" />

    <TextView
        android:id="@+id/added_tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_exercise_muscle_group" />

    <Button
        android:id="@+id/btn_add_muscle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="addMuscleGroupClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_exercise_muscle_group" />

    <Button
        android:id="@+id/btn_add_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="addToolsClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_exercise_tools" />


</androidx.constraintlayout.widget.ConstraintLayout>