<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_and_text">

    <Button
        android:id="@+id/loginLogoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_button_20"
        android:text="@string/login_button"
        android:textColor="@color/background_and_text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_button_20"
        android:text="@string/history_button"
        android:textColor="@color/background_and_text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogoutButton" />

    <Button
        android:id="@+id/friendsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_button_20"
        android:gravity="center"
        android:text="@string/friends_button"
        android:textColor="@color/background_and_text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@id/historyButton"
        app:layout_constraintStart_toStartOf="@id/historyButton"
        app:layout_constraintTop_toBottomOf="@id/historyButton" />

    <Button
        android:id="@+id/danishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_button_20"
        android:onClick="languageClicked"
        android:text="@string/language"
        android:textColor="@color/background_and_text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@id/friendsButton"
        app:layout_constraintStart_toStartOf="@id/friendsButton"
        app:layout_constraintTop_toBottomOf="@id/friendsButton" />

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayoutLogoutRemove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/danishButton"
        app:layout_constraintStart_toStartOf="@+id/danishButton">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_button_20"
            android:onClick="onClickLogout"
            android:text="@string/logout_button"
            android:textColor="@color/background_and_text"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userLoggedIn" />
    
        <TextView
            android:id="@+id/userLoggedInTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/user_logged_in"
            android:textColor="@color/normal_button_background"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/userLoggedIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    
        <TextView
            android:id="@+id/userLoggedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/user_not_logged_in"
            android:textColor="@color/normal_button_background"
            android:textColorHint="@color/normal_button_background"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/logoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>