<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_and_text"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_logo_height"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email constrain -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/green_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:text="joni2good@gmail.com"
            android:textColor="@color/button_text"
            android:textColorHint="@color/button_text"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- password constrain -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/green_outline"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/constraintLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutEmail">

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            android:text="123456"
            android:textColor="@color/button_text"
            android:textColorHint="@color/button_text"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- login button constrain -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/radius_button_20"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/constraintLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutPassword">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/normal_button_background"
            android:onClick="onClickSwitch"
            android:text="@string/login_button"
            android:textColor="@color/background_and_text"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:onClick="onClickSwitch"
        android:text="@string/forgotpassword_login"
        android:textColor="@color/button_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayoutLogin"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLogin" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:onClick="onClickSwitch"
        android:text="@string/register_login"
        android:textColor="@color/button_text"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutLogin"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLogin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>