<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/programLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/program_background_radius50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/programTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textColor="@color/background_and_text"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/time"
            android:textColor="@color/background_and_text"
            app:layout_constraintStart_toStartOf="@+id/programTitle"
            app:layout_constraintTop_toBottomOf="@+id/setActiveButton" />

        <TextView
            android:id="@+id/timeField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/background_and_text"
            app:layout_constraintEnd_toEndOf="@+id/setActiveButton"
            app:layout_constraintStart_toStartOf="@+id/muscle_group_list"
            app:layout_constraintTop_toTopOf="@+id/timeTitle" />


        <TextView
            android:id="@+id/exercisesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/exercises"
            android:textColor="@color/background_and_text"
            app:layout_constraintStart_toStartOf="@+id/programTitle"
            app:layout_constraintTop_toBottomOf="@+id/timeField" />

        <TextView
            android:id="@+id/exercise_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="TextView"
            android:textColor="@color/background_and_text"
            app:layout_constraintEnd_toEndOf="@+id/setActiveButton"
            app:layout_constraintStart_toEndOf="@+id/muscleGroupTitle"
            app:layout_constraintTop_toTopOf="@+id/exercisesTitle" />

        <TextView
            android:id="@+id/muscleGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/exercise_muscle_group"
            android:textColor="@color/background_and_text"
            app:layout_constraintStart_toStartOf="@+id/exercisesTitle"
            app:layout_constraintTop_toBottomOf="@+id/exercise_list" />

        <TextView
            android:id="@+id/muscle_group_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:text="TextView"
            android:textColor="@color/background_and_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/exercise_list"
            app:layout_constraintStart_toEndOf="@+id/muscleGroupTitle"
            app:layout_constraintTop_toTopOf="@+id/muscleGroupTitle" />

        <Button
            android:id="@+id/setActiveButton"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/radius_50"
            app:backgroundTint="@null"
            android:text="@string/setActive"
            android:textColor="@color/background_and_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/programTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>